syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/ybgr111/chat-server/grpc/pkg/chat_v1;chat_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Note API"
        version: "1.0.0"
        contact: {
            name: "Nikita Ivanov"
            email: "ybgr111@gtetotam.ru"
        };
    };

    host: "localhost:8080",
    schemes: HTTP,
    schemes: HTTPS,
    consumes: "application/json",
    produces: "application/json",
};

service ChatV1 {
    // Создает новый чат
    rpc Create(CreateRequest) returns (CreateResponse){
        option (google.api.http) = {
            post: "/chat/v1"
            body: "*"
        };
    }

    // Удаляет чат по id
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            delete: "/chat/v1"
        };
    }

    // Отправляет сообщение
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty){
        option (google.api.http) = {
            post: "/message/v1"
            body: "*"
        };
    }
}

message Message {
    string from = 1 [(validate.rules).string = {min_len: 1, max_len: 32}];
    string text = 2 [(validate.rules).string = {min_len: 50, max_len: 500}];
    google.protobuf.Timestamp timestamp = 3;
}

message Users {
    repeated string usernames = 1 [(validate.rules).repeated = {min_items: 2, max_items: 30}];
}

message CreateRequest {
    Users users = 1;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message SendMessageRequest {
    Message message = 1;
}